--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Vienna Sightseeing Beispiel</title>
+    <title>Almen rund um Innsbruck</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -40,20 +40,25 @@
 </head>
 
 <body>
+
+    <header>
+        <img src="bilder/titelbild.jpg" alt = "Bergpanorama Stubaital">
+    </header>
+
     <main>
-        <header>
-            <h2><i class="fa-solid fa-bus"></i> Vienna Sightseeing Beispiel</h2>
-            <nav>
-                <i class="fab fa-github"></i> <a href="https://github.com/webmapping/wien">Github</a>
-            </nav>
-        </header>
         <article>
+            <h1> Almen rund um Innsbruck</h1>
+            <p>
+                Hier kommt ein kurzer Text rein
+            </p>
+
             <div id="map"></div>
+
+
         </article>
         <footer>
-            <strong>Datenquellen:</strong>
             <nav>
-                <a href="https://data.gv.at/">data.gv.at</a>
+                <a href="https://data.gv.at/">Datenquelle: data.gv.at</a>
             </nav>
         </footer>
     </main>
