--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 <body>
 
     <header>
-        <img src="bilder/titelbild.jpg" alt = "Bergpanorama Stubaital">
+        <img src="bilder/titelbild.jpg" alt = "Bergpanorama Stubai- und Brennertal">
+         <!--Bildquelle: https://pixabay.com/de/photos/innsbruck-berge-schnee-fernsicht-358284/-->
     </header>
 
     <main>
@@ -57,9 +58,7 @@
 
         </article>
         <footer>
-            <nav>
-                <a href="https://data.gv.at/">Datenquelle: data.gv.at</a>
-            </nav>
+            <strong>Datenquellen:</strong> <a href="https://data.gv.at/">data.gv.at</a>
         </footer>
     </main>
 </body>
