--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
 
     <header>
-        <img src="bilder/titelbild.jpg" alt = "Bergpanorama Stubai- und Brennertal">
+        <img src="bilder/titelbild.jpg" alt = "Bergpanorama Stubai- und Brennertal" class="center">
          <!--Bildquelle: https://pixabay.com/de/photos/innsbruck-berge-schnee-fernsicht-358284/-->
     </header>
 
