--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
 
     <main>
-        <article>
+        <article class="shadow">
             <h1> Bewirtschaftete Hütten rund um Innsbruck</h1>
             <p>
                 Hier kommt ein kurzer Text rein. 
