--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <main>
         <article class="shadow">
             <h1> Bewirtschaftete Hütten rund um Innsbruck</h1>
-            <p>
+            <p class=" format">
                 Hier kommt ein kurzer Text rein. 
             </p>
 
