--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Bewirtschaftete Hütten rund um Innsbruck</title>
+    <title>Bewirtschaftete Hütten und Almen rund um Innsbruck</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -48,7 +48,7 @@
 
     <main>
         <article class="shadow">
-            <h1> Bewirtschaftete Hütten rund um Innsbruck</h1>
+            <h1> Bewirtschaftete Hütten und Almen rund um Innsbruck</h1>
             <p class=" format">
                 Egal, ob zum Schlemmen, zum Ausblick genießen oder einfach als Ziel der nächsten Bergtour. Man freut sich immer, wenn man oben angekommen ist und bei einem kaltem Bier und einer Jause den herrlichen Ausblick genießen kann. Hierfür braucht man von Innsbruck aus gar nicht so weit zu fahren, da schon einige Hütten bereits vor der Haustür liegen und leicht von Innsbruck aus zu erreichen sind.
                 <br>Welche das sind, wo sie liegen und was du sonst noch darüber wissen solltest, findest du alles hier auf dieser Seite. <br>
